--- a/assets/style.css
+++ b/assets/style.css
@@ -192,11 +192,18 @@ img:hover{
 
 /* mobile */
 @media (max-width: 400px) {
+  body{
+    width:100vw;
+    margin:0;
+  }
   .glitch{
     font-size:60px;
+    text-align:center;
+    line-height:1.2em;
   }
   h2{
     font-size:30px;
+    text-align:center;
   }
   .info{
     padding-top:30px;
